@@ -1,5 +1,6 @@
 package com.dnd.wedding.domain.jwt;
 
+import com.dnd.wedding.domain.jwt.repository.RefreshTokenRedisRepository;
 import com.dnd.wedding.domain.oauth.CustomUserDetails;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.ExpiredJwtException;
@@ -14,6 +15,7 @@ import java.util.Date;
 import java.util.stream.Collectors;
 import javax.crypto.SecretKey;
 import lombok.extern.log4j.Log4j2;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseCookie;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -27,10 +29,12 @@ import org.springframework.stereotype.Component;
 public class JwtTokenProvider {
 
   private final String COOKIE_REFRESH_TOKEN_KEY;
-  private final static Long ACCESS_TOKEN_EXPIRE_LENGTH = 1000L * 60 * 60;    // 1hour
-  private final static Long REFRESH_TOKEN_EXPIRE_LENGTH = 1000L * 60 * 60 * 24 * 7;  // 1week
-  private final static String AUTHORITIES_KEY = "role";
+  private static final Long ACCESS_TOKEN_EXPIRE_LENGTH = 1000L * 60 * 60;    // 1hour
+  private static final Long REFRESH_TOKEN_EXPIRE_LENGTH = 1000L * 60 * 60 * 24 * 7;  // 1week
+  private static final String AUTHORITIES_KEY = "role";
   private final SecretKey secretKey;
+  @Autowired
+  private RefreshTokenRedisRepository refreshTokenRedisRepository;
 
   public JwtTokenProvider(@Value("${app.auth.token.secret-key}") String secret,
       @Value("${app.auth.token.refresh-cookie-key}") String cookieKey) {
@@ -86,7 +90,11 @@ public class JwtTokenProvider {
   private void saveRefreshToken(Authentication authentication, String refreshToken) {
     CustomUserDetails user = (CustomUserDetails) authentication.getPrincipal();
 
-    // todo: redis
+    refreshTokenRedisRepository.save(RefreshToken.builder()
+        .email(user.getEmail())
+        .token(refreshToken)
+        .expiredTime(REFRESH_TOKEN_EXPIRE_LENGTH)
+        .build());
   }
 
   public Authentication getAuthentication(String accessToken) {
@@ -94,7 +102,7 @@ public class JwtTokenProvider {
 
     Collection<? extends GrantedAuthority> authorities =
         Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
-            .map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+            .map(SimpleGrantedAuthority::new).toList();
 
     CustomUserDetails principal = new CustomUserDetails(Long.valueOf(claims.getSubject()), "",
         null, null, authorities);
